utilities/dataOrganization/flywheel/logs/fw_download.16310385.err
  File "download_from_flywheel.py", line 291
    fw.delete_acquisition_file(sess_acq['_id'],current_nifti_name)_
                                                                  ^
SyntaxError: invalid syntax
